--- a/cryptocoins-colors.css
+++ b/cryptocoins-colors.css
@@ -1,32 +1,41 @@
-.cc-BTC, .cc-BTC-alt { color: #F7931A; }
-.cc-LTC, .cc-LTC-alt { color: #838383; }
-.cc-NMC, .cc-NMC-alt { color: #6787B7; }
-.cc-DOGE, .cc-DOGE-alt { color: #BA9F33; }
-.cc-DRK, .cc-DRK-alt { color: #4798CE; }
-.cc-PPC, .cc-PPC-alt { color: #3FA30C; }
-.cc-XRP, .cc-XRP-alt { color: #346AA9; }
-.cc-BTS, .cc-BTS-alt { color: #03A9E0; }
-.cc-NXT, .cc-NXT-alt { color: #008FBB; }
-.cc-XCP, .cc-XCP-alt { color: #EC1550; }
-.cc-XMR { color: #FF6600; }
-.cc-STR, .cc-STR-alt { color: #08B5E5; }
-.cc-FC2, .cc-FC2-alt { color: #040405; }
+.cc-ARCH, .cc-ARCH-alt { color: #002652; }
 .cc-BANX, .cc-BANX-alt { color: #225BA6; }
-.cc-NBT { color: #FFC93D; }
-.cc-BTCD, .cc-BTCD-alt { color: #2A72DC; }
-.cc-YBC, .cc-YBC-alt { color: #D6C154; }
 .cc-BC, .cc-BC-alt { color: #202121; }
-.cc-MSC, .cc-MSC-alt { color: #1D4983; }
-.cc-FTC, .cc-FTC-alt { color: #679EF1; }
-.cc-SYNC, .cc-SYNC-alt { color: #008DD2; }
-.cc-SDC, .cc-SDC-alt { color: #981D2D; }
-.cc-POT, .cc-POT-alt { color: #105B2F; }
-.cc-OPAL, .cc-OPAL-alt { color: #7193AA; }
 .cc-BCN, .cc-BCN-alt { color: #964F51; }
+.cc-BTC, .cc-BTC-alt { color: #F7931A; }
+.cc-BTCD, .cc-BTCD-alt { color: #2A72DC; }
+.cc-BTS, .cc-BTS-alt { color: #03A9E0; }
+.cc-DASH, .cc-DASH-alt { color: #1c75bc; }
+.cc-DOGE, .cc-DOGE-alt { color: #BA9F33; }
+.cc-FC2, .cc-FC2-alt { color: #040405; }
+.cc-FTC, .cc-FTC-alt { color: #679EF1; }
+.cc-GEMZ, .cc-GEMZ-alt { color: #e86060; }
 .cc-GRC, .cc-GRC-alt { color: #88A13C; }
+.cc-IFC, .cc-IFC-alt { color: #ed272d; }
 .cc-KORE, .cc-KORE-alt { color: #DF4124; }
+.cc-LTC, .cc-LTC-alt { color: #838383; }
 .cc-MAID, .cc-MAID-alt { color: #5492D6; }
+.cc-MSC, .cc-MSC-alt { color: #1D4983; }
+.cc-NBT { color: #FFC93D; }
+.cc-NMC, .cc-NMC-alt { color: #6787B7; }
+.cc-NOTE, .cc-NOTE-alt { color: #42daff; }
+.cc-NXT, .cc-NXT-alt { color: #008FBB; }
+.cc-OPAL, .cc-OPAL-alt { color: #7193AA; }
+.cc-POT, .cc-POT-alt { color: #105B2F; }
+.cc-PPC, .cc-PPC-alt { color: #3FA30C; }
 .cc-QRK, .cc-QRK-alt { color: #22AABF; }
+.cc-RBT, .cc-RBT-alt { color: #0d4982; }
+.cc-SDC, .cc-SDC-alt { color: #981D2D; }
+.cc-STR, .cc-STR-alt { color: #08B5E5; }
+.cc-SYNC, .cc-SYNC-alt { color: #008DD2; }
 .cc-UNITY, .cc-UNITY-alt { color: #ED8527; }
 .cc-VIOR, .cc-VIOR-alt { color: #1F52A4; }
 .cc-VPN, .cc-VPN-alt { color: #589700; }
+.cc-VRC, .cc-VRC-alt { color: #418bca; }
+.cc-VTC, .cc-VTC-alt { color: #1b5c2e; }
+.cc-XBS, .cc-XBS-alt { color: #dc2a25; }
+.cc-XCP, .cc-XCP-alt { color: #EC1550; }
+.cc-XEM, .cc-XEM-alt { color: #41bf76; }
+.cc-XMR { color: #FF6600; }
+.cc-XRP, .cc-XRP-alt { color: #346AA9; }
+.cc-YBC, .cc-YBC-alt { color: #D6C154; }
