--- a/cryptocoins-colors.css
+++ b/cryptocoins-colors.css
@@ -33,9 +33,18 @@
 .cc-VPN, .cc-VPN-alt { color: #589700; }
 .cc-VRC, .cc-VRC-alt { color: #418bca; }
 .cc-VTC, .cc-VTC-alt { color: #1b5c2e; }
-.cc-XBS, .cc-XBS-alt { color: #dc2a25; }
 .cc-XCP, .cc-XCP-alt { color: #EC1550; }
 .cc-XEM, .cc-XEM-alt { color: #41bf76; }
 .cc-XMR { color: #FF6600; }
 .cc-XRP, .cc-XRP-alt { color: #346AA9; }
 .cc-YBC, .cc-YBC-alt { color: #D6C154; }
+.cc-BAY { color: #2b99ff; }
+.cc-DMD, .cc-DMD-alt { color: #5497b2; }
+.cc-FRK, .cc-FRK-alt { color: #0633cd; }
+.cc-IOC, .cc-IOC-alt { color: #2fa3de; }
+.cc-LDOGE, .cc-LDOGE-alt { color: #ffcc00; }
+.cc-MTR, .cc-MTR-alt { color: #b92429; }
+.cc-MUE, .cc-MUE-alt { color: #f5a10e; }
+.cc-XAI, .cc-XAI-alt { color: #2ef99f; }
+.cc-XBS, .cc-XBS-alt { color: #d3261d; }
+.cc-XPM, .cc-XPM-alt { color: #e5b625; }
