--- a/cryptocoins.css
+++ b/cryptocoins.css
@@ -1,16 +1,16 @@
 @font-face {
-	font-family: 'Cryptocoins';
-	src:url('fonts/Cryptocoins.eot?pbcptd');
-	src:url('fonts/Cryptocoins.eot?#iefixpbcptd') format('embedded-opentype'),
-		url('fonts/Cryptocoins.ttf?pbcptd') format('truetype'),
-		url('fonts/Cryptocoins.woff?pbcptd') format('woff'),
-		url('fonts/Cryptocoins.svg?pbcptd#Cryptocoins') format('svg');
+	font-family: 'cryptocoins';
+	src:url('fonts/cryptocoins.eot?usp6y7');
+	src:url('fonts/cryptocoins.eot?#iefixusp6y7') format('embedded-opentype'),
+		url('fonts/cryptocoins.ttf?usp6y7') format('truetype'),
+		url('fonts/cryptocoins.woff?usp6y7') format('woff'),
+		url('fonts/cryptocoins.svg?usp6y7#cryptocoins') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 
 i {
-	font-family: 'Cryptocoins';
+	font-family: 'cryptocoins';
 	speak: none;
 	font-style: normal;
 	font-weight: normal;
@@ -23,243 +23,294 @@ i {
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.cc-XRP:before {
+	content: "\e600";
+}
+.cc-XMR:before {
+	content: "\e601";
+}
+.cc-XPM:before {
+	content: "\e602";
+}
+.cc-XPM-alt:before {
+	content: "\e603";
+}
+.cc-XRP-alt:before {
+	content: "\e604";
+}
+.cc-YBC:before {
+	content: "\e605";
+}
+.cc-YBC-alt:before {
+	content: "\e606";
+}
+.cc-XCP:before {
+	content: "\e607";
+}
+.cc-XCP-alt:before {
+	content: "\e608";
+}
+.cc-XEM:before {
+	content: "\e609";
+}
+.cc-XEM-alt:before {
+	content: "\e60a";
+}
+.cc-SYNC:before {
+	content: "\e60b";
+}
+.cc-SYNC-alt:before {
+	content: "\e60c";
+}
+.cc-UNITY:before {
+	content: "\e60d";
+}
+.cc-UNITY-alt:before {
+	content: "\e60e";
+}
+.cc-VIOR:before {
+	content: "\e60f";
+}
+.cc-VIOR-alt:before {
+	content: "\e610";
+}
+.cc-VPN:before {
+	content: "\e611";
+}
+.cc-VPN-alt:before {
+	content: "\e612";
+}
+.cc-VRC:before {
+	content: "\e613";
+}
+.cc-VRC-alt:before {
+	content: "\e614";
+}
+.cc-VTC:before {
+	content: "\e615";
+}
+.cc-VTC-alt:before {
+	content: "\e616";
+}
+.cc-XAI:before {
+	content: "\e617";
+}
+.cc-XAI-alt:before {
+	content: "\e618";
+}
 .cc-XBS:before {
-	content: "\e64e";
+	content: "\e619";
 }
 .cc-XBS-alt:before {
+	content: "\e61a";
+}
+.cc-NOTE:before {
+	content: "\e61b";
+}
+.cc-NOTE-alt:before {
+	content: "\e61c";
+}
+.cc-NXT:before {
+	content: "\e61d";
+}
+.cc-NXT-alt:before {
+	content: "\e61e";
+}
+.cc-OPAL:before {
+	content: "\e61f";
+}
+.cc-OPAL-alt:before {
+	content: "\e620";
+}
+.cc-POT:before {
+	content: "\e621";
+}
+.cc-POT-alt:before {
+	content: "\e622";
+}
+.cc-PPC:before {
+	content: "\e623";
+}
+.cc-PPC-alt:before {
+	content: "\e624";
+}
+.cc-QRK:before {
+	content: "\e625";
+}
+.cc-QRK-alt:before {
+	content: "\e626";
+}
+.cc-RBT:before {
+	content: "\e627";
+}
+.cc-RBT-alt:before {
+	content: "\e628";
+}
+.cc-SDC:before {
+	content: "\e629";
+}
+.cc-SDC-alt:before {
+	content: "\e62a";
+}
+.cc-STR:before {
+	content: "\e62b";
+}
+.cc-STR-alt:before {
+	content: "\e62c";
+}
+.cc-KORE:before {
+	content: "\e62d";
+}
+.cc-KORE-alt:before {
+	content: "\e62e";
+}
+.cc-LDOGE:before {
+	content: "\e62f";
+}
+.cc-LDOGE-alt:before {
+	content: "\e630";
+}
+.cc-LTC:before {
+	content: "\e631";
+}
+.cc-LTC-alt:before {
+	content: "\e632";
+}
+.cc-MAID:before {
+	content: "\e633";
+}
+.cc-MAID-alt:before {
+	content: "\e634";
+}
+.cc-MSC:before {
+	content: "\e635";
+}
+.cc-MSC-alt:before {
+	content: "\e636";
+}
+.cc-MTR:before {
+	content: "\e637";
+}
+.cc-MTR-alt:before {
+	content: "\e638";
+}
+.cc-MUE:before {
+	content: "\e639";
+}
+.cc-MUE-alt:before {
+	content: "\e63a";
+}
+.cc-NBT:before {
+	content: "\e63b";
+}
+.cc-NMC:before {
+	content: "\e63c";
+}
+.cc-NMC-alt:before {
+	content: "\e63d";
+}
+.cc-DMD:before {
+	content: "\e63e";
+}
+.cc-DMD-alt:before {
+	content: "\e63f";
+}
+.cc-DOGE:before {
+	content: "\e640";
+}
+.cc-DOGE-alt:before {
+	content: "\e641";
+}
+.cc-FC2:before {
+	content: "\e642";
+}
+.cc-FC2-alt:before {
+	content: "\e643";
+}
+.cc-FRK:before {
+	content: "\e644";
+}
+.cc-FRK-alt:before {
+	content: "\e645";
+}
+.cc-FTC:before {
+	content: "\e646";
+}
+.cc-FTC-alt:before {
+	content: "\e647";
+}
+.cc-GEMZ:before {
+	content: "\e648";
+}
+.cc-GEMZ-alt:before {
+	content: "\e649";
+}
+.cc-GRC:before {
+	content: "\e64a";
+}
+.cc-GRC-alt:before {
+	content: "\e64b";
+}
+.cc-IFC:before {
+	content: "\e64c";
+}
+.cc-IFC-alt:before {
+	content: "\e64d";
+}
+.cc-IOC:before {
+	content: "\e64e";
+}
+.cc-IOC-alt:before {
 	content: "\e64f";
 }
 .cc-ARCH:before {
-	content: "\e606";
+	content: "\e650";
 }
 .cc-ARCH-alt:before {
-	content: "\e607";
-}
-.cc-DASH:before {
-	content: "\e63e";
-}
-.cc-DASH-alt:before {
-	content: "\e63f";
-}
-.cc-GEMZ:before {
-	content: "\e640";
-}
-.cc-GEMZ-alt:before {
-	content: "\e641";
-}
-.cc-IFC:before {
-	content: "\e642";
-}
-.cc-IFC-alt:before {
-	content: "\e643";
-}
-.cc-NOTE:before {
-	content: "\e644";
-}
-.cc-NOTE-alt:before {
-	content: "\e645";
-}
-.cc-RBT:before {
-	content: "\e646";
-}
-.cc-RBT-alt:before {
-	content: "\e647";
-}
-.cc-VRC:before {
-	content: "\e648";
-}
-.cc-VRC-alt:before {
-	content: "\e649";
-}
-.cc-VTC:before {
-	content: "\e64a";
-}
-.cc-VTC-alt:before {
-	content: "\e64b";
-}
-.cc-XEM:before {
-	content: "\e64c";
-}
-.cc-XEM-alt:before {
-	content: "\e64d";
-}
-.cc-BCN:before {
-	content: "\e602";
-}
-.cc-BCN-alt:before {
-	content: "\e603";
-}
-.cc-BTS:before {
-	content: "\e62e";
-}
-.cc-BTS-alt:before {
-	content: "\e62f";
-}
-.cc-GRC:before {
-	content: "\e630";
-}
-.cc-GRC-alt:before {
-	content: "\e631";
-}
-.cc-KORE:before {
-	content: "\e632";
-}
-.cc-KORE-alt:before {
-	content: "\e633";
-}
-.cc-MAID:before {
-	content: "\e634";
-}
-.cc-MAID-alt:before {
-	content: "\e635";
-}
-.cc-QRK:before {
-	content: "\e636";
-}
-.cc-QRK-alt:before {
-	content: "\e637";
-}
-.cc-UNITY:before {
-	content: "\e638";
-}
-.cc-UNITY-alt:before {
-	content: "\e639";
-}
-.cc-VIOR:before {
-	content: "\e63a";
-}
-.cc-VIOR-alt:before {
-	content: "\e63b";
-}
-.cc-VPN:before {
-	content: "\e63c";
-}
-.cc-VPN-alt:before {
-	content: "\e63d";
+	content: "\e651";
 }
 .cc-BANX:before {
-	content: "\e615";
+	content: "\e652";
 }
 .cc-BANX-alt:before {
-	content: "\e616";
+	content: "\e653";
+}
+.cc-BAY:before {
+	content: "\e654";
 }
 .cc-BC:before {
-	content: "\e617";
+	content: "\e655";
 }
 .cc-BC-alt:before {
-	content: "\e618";
+	content: "\e656";
 }
-.cc-BTCD:before {
-	content: "\e619";
+.cc-BCN:before {
+	content: "\e657";
 }
-.cc-BTCD-alt:before {
-	content: "\e61a";
-}
-.cc-FC2:before {
-	content: "\e61b";
-}
-.cc-FC2-alt:before {
-	content: "\e61c";
-}
-.cc-FTC:before {
-	content: "\e61d";
-}
-.cc-FTC-alt:before {
-	content: "\e61e";
-}
-.cc-MSC:before {
-	content: "\e61f";
-}
-.cc-MSC-alt:before {
-	content: "\e620";
-}
-.cc-NBT:before {
-	content: "\e621";
-}
-.cc-OPAL:before {
-	content: "\e622";
-}
-.cc-OPAL-alt:before {
-	content: "\e623";
-}
-.cc-POT:before {
-	content: "\e624";
-}
-.cc-POT-alt:before {
-	content: "\e625";
-}
-.cc-SDC:before {
-	content: "\e626";
-}
-.cc-SDC-alt:before {
-	content: "\e627";
-}
-.cc-STR:before {
-	content: "\e628";
-}
-.cc-STR-alt:before {
-	content: "\e629";
-}
-.cc-SYNC:before {
-	content: "\e62a";
-}
-.cc-SYNC-alt:before {
-	content: "\e62b";
-}
-.cc-YBC:before {
-	content: "\e62c";
-}
-.cc-YBC-alt:before {
-	content: "\e62d";
+.cc-BCN-alt:before {
+	content: "\e658";
 }
 .cc-BTC:before {
-	content: "\e600";
+	content: "\e659";
 }
 .cc-BTC-alt:before {
-	content: "\e601";
+	content: "\e65a";
 }
-.cc-DOGE:before {
-	content: "\e604";
+.cc-BTCD:before {
+	content: "\e65b";
 }
-.cc-DOGE-alt:before {
-	content: "\e605";
+.cc-BTCD-alt:before {
+	content: "\e65c";
 }
-.cc-LTC:before {
-	content: "\e608";
+.cc-BTS:before {
+	content: "\e65d";
 }
-.cc-LTC-alt:before {
-	content: "\e609";
+.cc-BTS-alt:before {
+	content: "\e65e";
 }
-.cc-NMC:before {
-	content: "\e60a";
+.cc-DASH:before {
+	content: "\e65f";
 }
-.cc-NMC-alt:before {
-	content: "\e60b";
-}
-.cc-NXT:before {
-	content: "\e60c";
-}
-.cc-NXT-alt:before {
-	content: "\e60d";
-}
-.cc-PPC:before {
-	content: "\e60e";
-}
-.cc-PPC-alt:before {
-	content: "\e60f";
-}
-.cc-XCP:before {
-	content: "\e610";
-}
-.cc-XCP-alt:before {
-	content: "\e611";
-}
-.cc-XMR:before {
-	content: "\e612";
-}
-.cc-XRP:before {
-	content: "\e613";
-}
-.cc-XRP-alt:before {
-	content: "\e614";
+.cc-DASH-alt:before {
+	content: "\e660";
 }
