--- a/cryptocoins-colors.css
+++ b/cryptocoins-colors.css
@@ -38,7 +38,6 @@
 .cc-XMR { color: #FF6600; }
 .cc-XRP, .cc-XRP-alt { color: #346AA9; }
 .cc-YBC, .cc-YBC-alt { color: #D6C154; }
-.cc-BAY { color: #2b99ff; }
 .cc-DMD, .cc-DMD-alt { color: #5497b2; }
 .cc-FRK, .cc-FRK-alt { color: #0633cd; }
 .cc-IOC, .cc-IOC-alt { color: #2fa3de; }
@@ -48,3 +47,14 @@
 .cc-XAI, .cc-XAI-alt { color: #2ef99f; }
 .cc-XBS, .cc-XBS-alt { color: #d3261d; }
 .cc-XPM, .cc-XPM-alt { color: #e5b625; }
+.cc-BAY, .cc-BAY-alt { color: #584ba1; }
+.cc-DGB, .cc-DGB-alt { color: #0066cc; }
+.cc-DOGED, .cc-DOGED-alt { color: #b2a675; }
+.cc-EMC, .cc-EMC-alt { color: #674c8c; }
+.cc-ETH, .cc-ETH-alt { color: #282828; }
+.cc-MINT, .cc-MINT-alt { color: #006835; }
+.cc-MONA, .cc-MONA-alt { color: #a99364; }
+.cc-MRC { color: #4279bd; }
+.cc-NEU, .cc-NEU-alt { color: #2983c0; }
+.cc-NVC, .cc-NVC-alt { color: #ecab41; }
+.cc-RBY, .cc-RBY-alt { color: #c81100; }
