--- a/cryptocoins-colors.css
+++ b/cryptocoins-colors.css
@@ -49,7 +49,6 @@
 .cc-XPM, .cc-XPM-alt { color: #e5b625; }
 .cc-BAY, .cc-BAY-alt { color: #584ba1; }
 .cc-DGB, .cc-DGB-alt { color: #0066cc; }
-.cc-DOGED, .cc-DOGED-alt { color: #b2a675; }
 .cc-EMC, .cc-EMC-alt { color: #674c8c; }
 .cc-ETH, .cc-ETH-alt { color: #282828; }
 .cc-MINT, .cc-MINT-alt { color: #006835; }
@@ -57,4 +56,22 @@
 .cc-MRC { color: #4279bd; }
 .cc-NEU, .cc-NEU-alt { color: #2983c0; }
 .cc-NVC, .cc-NVC-alt { color: #ecab41; }
-.cc-RBY, .cc-RBY-alt { color: #c81100; }
+.cc-AEON, .cc-AEON-alt { color: #164450; }
+.cc-AMP, .cc-AMP-alt { color: #048DD2; }
+.cc-ANC, .cc-ANC-alt { color: #000; }
+.cc-BTA { color: #210094; }
+.cc-CLAM, .cc-CLAM-alt { color: #D6AB31; }
+.cc-CLOAK, .cc-CLOAK-alt { color: #DF3F1E; }
+.cc-DCR, .cc-DCR-alt { color: #43A2CA; }
+.cc-NEOS, .cc-NEOS-alt { color: #3771B1; }
+.cc-NLG, .cc-NLG-alt { color: #003E7E; }
+.cc-OK, .cc-OK-alt { color: #0165A4; }
+.cc-OMNI, .cc-OMNI-alt { color: #18347E; }
+.cc-RBY, .cc-RBY-alt { color: #D31F26; }
+.cc-SCOT, .cc-SCOT-alt { color: #3498DB; }
+.cc-SJCX, .cc-SJCX-alt { color: #003366; }
+.cc-START, .cc-START-alt { color: #01AEF0; }
+.cc-SYS, .cc-SYS-alt { color: #0098DA; }
+.cc-VNL, .cc-VNL-alt { color: #404249; }
+.cc-TX, .cc-TX-alt { color: #1F8BCC; }
+.cc-XVG, .cc-XVG-alt { color: #42AFB2; }
